[CSS Container Queries][Style queries] Incorrect difference between implicit and explicit initial values for custom properties https://bugs.webkit.org/show_bug.cgi?id=270739 rdar://124573975

Reviewed by Alan Baradlay.

Make sure guaranteed-invalid values match other guaranteed-invalid values whether explicitly (with `initial`) or implicitly specified.

* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/custom-property-style-queries-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/custom-property-style-queries.html:
* Source/WebCore/css/query/ContainerQueryFeatures.cpp:

Test consistently for guaranteed-invalid values.

* Source/WebCore/style/StyleBuilder.cpp:
(WebCore::Style::Builder::resolveCustomPropertyForContainerQueries):

Return a nullptr only in failure cases (revert/revert-layer) and an invalid value otherwise.

Canonical link: https://commits.webkit.org/277670@main