Source/WebCore/style/StyleBuilder.cpp
@@ -460,7 +460,7 @@ RefPtr<const CSSCustomPropertyValue> Builder::resolveCustomPropertyForContainerQ
         auto initial = [&]() -> RefPtr<const CSSCustomPropertyValue> {
             if (registered)
                 return registered->initialValue;
-            return nullptr;
+            return CSSCustomPropertyValue::createWithID(name, CSSValueInvalid);
         };
 
         auto inherit = [&]() -> RefPtr<const CSSCustomPropertyValue> {
@@ -483,13 +483,22 @@ RefPtr<const CSSCustomPropertyValue> Builder::resolveCustomPropertyForContainerQ
             return isInherited ? inherit() : initial();
         case CSSValueRevert:
         case CSSValueRevertLayer:
+            // https://drafts.csswg.org/css-contain-3/#style-container
+            // "Cascade-dependent keywords, such as revert and revert-layer, are invalid as values in a style feature,
+            // and cause the container style query to be false."
             return nullptr;
         default:
-            ASSERT_NOT_REACHED();
-            return nullptr;
+            break;
         }
+        ASSERT_NOT_REACHED();
+        return nullptr;
     }
-    return resolveCustomPropertyValue(const_cast<CSSCustomPropertyValue&>(value));
+
+    auto resolvedValue = resolveCustomPropertyValue(const_cast<CSSCustomPropertyValue&>(value));
+    if (!resolvedValue)
+        return CSSCustomPropertyValue::createWithID(value.name(), CSSValueInvalid);
+
+    return resolvedValue;
 }
 
 RefPtr<CSSCustomPropertyValue> Builder::resolveCustomPropertyValue(CSSCustomPropertyValue& value)
